--- a/src_back/templates/form.html
+++ b/src_back/templates/form.html
@@ -1,6 +1,28 @@
-Wyślij obraz:
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
 
-<form action="/material" method="POST" enctype="multipart/form-data">
-    <input type="file" name="img"/>
-    <input type="submit" name="Wyślij"/>
-</form>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+  </head>
+  <body>
+  <div class="container">
+      <h3>Send an image:</h3>
+
+        <form action="/material" method="POST" enctype="multipart/form-data">
+            <label class="custom-file-upload">
+                Select a photo
+                <input type="file" accept="image/*" capture="camera" />
+            </label>
+            <input class="custom-file-upload" type="submit" name="Wyślij"/>
+        </form>
+  </div>
+  </body>
+
+</html>
