fix html instead of json

--- a/src_back/templates/form.html
+++ b/src_back/templates/form.html
@@ -18,7 +18,7 @@
         <form action="/material" method="POST" enctype="multipart/form-data">
             <label class="custom-file-upload">
                 Select a photo
-                <input type="file" accept="image/*" capture="camera" />
+                <input name="img" type="file" accept="image/*" capture="camera" />
             </label>
             <input class="custom-file-upload" type="submit" name="Wyślij"/>
         </form>
